recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:7: error: value -= is not a member of Int
    steps -= 1
          ^